# nkt_tools

./: .gitignore  .readthedocs.yaml  CNAME  LICENSE  README.md  pyproject.toml  readme.rst
docs/: requirements.txt
docs/source/: conf.py  development_notes.rst  examples.rst  index.rst
docs/source/_autosummary/: nkt_tools.NKTPDLL.rst  nkt_tools.NKTPDLL.x64.rst  nkt_tools.NKTPDLL.x86.rst  nkt_tools.NKTP_DLL.DeviceModeTypes.rst  nkt_tools.NKTP_DLL.P2PPortResultTypes.rst  nkt_tools.NKTP_DLL.ParamSetUnitTypes.rst  nkt_tools.NKTP_DLL.PortStatusTypes.rst  nkt_tools.NKTP_DLL.RegisterDataTypes.rst  nkt_tools.NKTP_DLL.RegisterPriorityTypes.rst  nkt_tools.NKTP_DLL.RegisterStatusTypes.rst  nkt_tools.NKTP_DLL.deviceExists.rst  nkt_tools.NKTP_DLL.deviceGetBootloaderVersion.rst  nkt_tools.NKTP_DLL.deviceGetErrorCode.rst  nkt_tools.NKTP_DLL.deviceGetFirmwareVersion.rst  nkt_tools.NKTP_DLL.deviceGetLive.rst  nkt_tools.NKTP_DLL.deviceGetPCBSerialNumberStr.rst  nkt_tools.NKTP_DLL.deviceGetPCBVersion.rst  nkt_tools.NKTP_DLL.deviceGetStatusBits.rst  nkt_tools.NKTP_DLL.deviceGetType.rst  nkt_tools.NKTP_DLL.deviceRemoveAll.rst  nkt_tools.NKTP_DLL.getPortErrorMsg.rst  nkt_tools.NKTP_DLL.openPorts.rst  nkt_tools.NKTP_DLL.pointToPointPortData.rst  nkt_tools.NKTP_DLL.pointToPointPortDel.rst  nkt_tools.NKTP_DLL.pointToPointPortGet.rst  nkt_tools.NKTP_DLL.registerCreate.rst  nkt_tools.NKTP_DLL.registerExists.rst  nkt_tools.NKTP_DLL.registerReadF32.rst  nkt_tools.NKTP_DLL.registerReadS32.rst  nkt_tools.NKTP_DLL.registerReadS64.rst  nkt_tools.NKTP_DLL.registerReadU32.rst  nkt_tools.NKTP_DLL.registerReadU64.rst  nkt_tools.NKTP_DLL.registerReadU8.rst  nkt_tools.NKTP_DLL.registerRemove.rst  nkt_tools.NKTP_DLL.registerWriteAscii.rst  nkt_tools.NKTP_DLL.registerWriteF64.rst  nkt_tools.NKTP_DLL.registerWriteRead.rst  nkt_tools.NKTP_DLL.registerWriteReadAscii.rst  nkt_tools.NKTP_DLL.registerWriteReadF64.rst  nkt_tools.NKTP_DLL.registerWriteReadS16.rst  (+19 more)
docs/source/_build/doctrees/: api.doctree  development_notes.doctree  examples.doctree  guide.doctree  index.doctree
docs/source/_build/html/: .buildinfo  api.html  development_notes.html  examples.html  guide.html  (+6 more)
docs/source/_templates/: custom-module-template.rst
examples/: Laser_Control_Demo.ipynb
manuals/: ~$atgpt_auto_nkt_tools_prompt.docx
manuals/dll_examples/: Extreme_Emission_On.py
nkt_tools/: NKTP_DLL.py  basik.py  chatgpt_extend_uv.py  chatgpt_select.py  extreme.py  rfdriver.py  select.py  varia.py
nkt_tools/NKTPDLL/x64/: __init__.py
(+246 files in other folders)
