[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "nkt_tools"
version = "0.0.1"
authors = [
  { name="Briley Bourgeois", email="bbourge6@stanford.edu" }
]
description = "Python package for accessing NKT photonics project through NKTPDLL"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]
[project.urls]
"Homepage" = "https://github.com/Dionne-Lab/nkt_tools"
"Bug Tracker" = "https://github.com/Dionne-Lab/nkt_tools/issues"

[tool.setuptools.dynamic]

[tool.setuptools]
py-modules = ["nkt_tools"]
