[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "nkt_tools"
version = "0.0.8"
authors = [
  { name="Briley Bourgeois", email="bbourge6@stanford.edu" }
]
description = "Python package for accessing NKT photonics project through NKTPDLL"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Dionne-Lab/nkt_tools"
"Bug Tracker" = "https://github.com/Dionne-Lab/nkt_tools/issues"

[tools.setuptools]
include-package-data = true

[tools.setuptools.package-data]
'nkt_tools.NKTPDLL.x86' = ["*.dll"]
'nkt_tools.NKTPDLL.x64' = ["*.dll"]

[tools.setuptools.packages.find]
exclude = ["manuals*"]
include = ["nkt_tools*"]
